Fix white background gap and scroll-to-top on navigation

--- a/src/input.css
+++ b/src/input.css
@@ -11,7 +11,8 @@
     src: url("./assets/fonts/SF-Pro-Display-Thin.otf");
 }
 
-body {
+body, html {
+    background-color: black;
     font-family: -apple-system, BlinkMacSystemFont, "SF Pro Display", "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
